k8s/grafana-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-stack-grafana
  namespace: monitoring
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/name: grafana
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 3000
