k8s/triton-inferenceservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: clinical-triton-service
  namespace: triton
  labels:
    app: clinical-triton
spec:
  type: ClusterIP
  selector:
    serving.kserve.io/inferenceservice: clinical-assertion
  ports:
    - name: grpc
      port: 8001
      targetPort: 8001
      protocol: TCP
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: metrics
      port: 8002
      targetPort: 8002
      protocol: TCP
